--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,6 @@ volumes:
     driver: local
 
 services:
-  postgres:
-    image: postgres:13.7
-    container_name: postgres
-    volumes:
-      - keycloak-db-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: my_keycloak
-      POSTGRES_PASSWORD: My863Keycloak
   keycloak:
     build: .
     container_name: custom-auth-service
@@ -25,9 +16,9 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: MyKeycloak493
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: MyKeycloak493
-      KC_DB_URL: 'jdbc:postgresql://postgres/keycloak'
-      KC_DB_USERNAME: my_keycloak
-      KC_DB_PASSWORD: My863Keycloak
+      KC_DB_URL: 'jdbc:postgresql://db.buwvyjjfiyfcgcdvbfke.supabase.co:5432/postgres'
+      KC_DB_USERNAME: 'postgres'
+      KC_DB_PASSWORD: 'Skyliner005!"£'
       KC_HEALTH_ENABLED: 'true'
       KC_METRICS_ENABLED: 'true'
       KC_HOSTNAME: localhost
@@ -39,5 +30,3 @@ services:
     ports:
       - 8443:8443
       - 8080:8080
-    depends_on:
-      - postgres
