--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       - uses: google-github-actions/setup-gcloud@master
         with:
-          service_account_key: ${{secret.SERVICE_ACCOUNT_KEY}}
+          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
           project_id: ${{env.PROJECT_ID}}
           export_default_credentials: true
 
