--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Push Docker Image to Container Registry (GCR)
         env:
-          GIT_TAG: ${{ steps.increment-git-tag.outputs.git-tag }}
+          GIT_TAG: $TAG_NAME
         run: |-
           docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
           docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
