updated the tag name

--- a/.github/workflows/gcp.yml
+++ b/.github/workflows/gcp.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Push Docker Image to Container Registry (GCR)
         env:
-          GIT_TAG: dasfdf2313
+          GIT_TAG: idskeycloakserverregistry
         run: |-
           docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:latest
           docker tag $IMAGE_NAME:latest gcr.io/$PROJECT_ID/$IMAGE_NAME:$GIT_TAG
@@ -37,7 +37,7 @@ jobs:
 
       - name: Push Docker Image to Artifact Registry
         env:
-          GIT_TAG: dasfdf2313
+          GIT_TAG: idskeycloakserverartifacts
         run: |-
           docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:latest
           docker tag $IMAGE_NAME:latest us-west2-docker.pkg.dev/$PROJECT_ID/images/$IMAGE_NAME:$GIT_TAG
