--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       KC_DB_PASSWORD: 'Skyliner005!"£'
       KC_HEALTH_ENABLED: 'true'
       KC_METRICS_ENABLED: 'true'
-      KC_HOSTNAME: localhost
+      KC_HOSTNAME: 0.0.0.0
       PROXY_ADDRESS_FORWARDING: "true"
       KC_SPI_THEME_DEFAULT: 'my-theme'
     command:
